# neternels-web

./: .gitignore  .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  app.py  requirements.txt
admin/: package.json
modules/: connector.py
server/: .env  Cargo.toml  secret.key  setup.sql
server/src/: .db.rs.swp  db.rs  handler.rs  main.rs
static/css/: download.css  menu.css  request.css  sidebar.css  slider.css  style.css
static/css/desktop/: download.css  menu.css  request.css  slider.css  style.css
static/css/mobile/: download.css  menu.css  request.css  style.css
templates/: 404.html  dev_edit.html  dev_login.html  downloads.html  howto.html  index.html  req_return.html  request.html
