[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.1.0"
env_logger="0.9.0"
log="0.4.17"
postgres={ version="0.19.3"}
postgres-openssl="0.5.0"
dotenv="0.15.0"
r2d2="0.8.10"
r2d2_postgres="0.18.1"
openssl="0.10.40"
serde="1.0.137"